# interviews

./: .env.dev  .gitignore  Dockerfile  README.md  aerich.ini  docker-compose.yml  main.py  pyproject.toml
scripts/: createsuperuser.py
src/app/: routers.py
src/app/auth/: api.py  celery_worker.py  jwt.py  models.py  permissions.py  schemas.py  send_email.py  service.py
src/app/base/: base_service.py
src/app/base/utils/: email.py
src/app/companies/: models.py  schemas.py  service.py
src/app/companies/endpoint/: address.py  classification.py  company.py
src/app/reviews/: models.py  schemas.py  service.py
src/app/reviews/endpoint/: comment.py  review.py
src/app/users/: models.py  schemas.py  service.py
src/app/users/endpoint/: admin.py  users.py
src/app/vacancies/: models.py  schemas.py  service.py
src/app/vacancies/endpoint/: skill.py  vacancy.py
src/config/: settings.py
src/db/: db.py
